WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103412
Calling .removeCue() for a cue that was never added should raise a NOT_FOUND_ERR
https://bugs.webkit.org/show_bug.cgi?id=103412
Summary
Calling .removeCue() for a cue that was never added should raise a NOT_FOUND_ERR
Antoine Quint
Reported
2012-11-27 08:07:27 PST
We are failing the Opera-submitted test at
http://w3c-test.org/html/tests/submission/Opera/media/interfaces/TextTrack/removeCue.html
due to failing to raising an INVALID_STATE_ERR exception instead of the expected NOT_FOUND_ERR exception when calling .removeCue() for a cue that was not added on a given track. The spec is quite clear on that, we're not doing the right thing (see
http://www.whatwg.org/specs/web-apps/current-work/multipage/the-video-element.html#dom-texttrack-removecue
).
Attachments
Patch
(4.81 KB, patch)
2012-11-28 08:19 PST
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2012-11-27 08:07:53 PST
<
rdar://problem/12757953
>
Antoine Quint
Comment 2
2012-11-28 08:19:07 PST
Created
attachment 176488
[details]
Patch
WebKit Review Bot
Comment 3
2012-11-28 10:56:40 PST
Comment on
attachment 176488
[details]
Patch Clearing flags on attachment: 176488 Committed
r136026
: <
http://trac.webkit.org/changeset/136026
>
WebKit Review Bot
Comment 4
2012-11-28 10:56:43 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug